Apartado de entrada front-end y back-end

--- a/BlogMVC/Views/Usuarios/Listado.cshtml
+++ b/BlogMVC/Views/Usuarios/Listado.cshtml
@@ -26,6 +26,8 @@
                 <tr>
                     <td>
                         <a class="btn btn-primary me-2"
+                        asp-action="RolesUsuario"
+                        asp-route-usuarioId="@usuario.Id"
                             >Editar Roles</a>
                     </td>
                     <td>
