--- a/BlogMVC/Views/Shared/_Layout.cshtml
+++ b/BlogMVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BlogMVC.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/an-old-hope.min.css">
+
 </head>
 <body>
     <header>
@@ -23,6 +26,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+
+                        @if (User.IsInRole(Constantes.RolAdmin) || User.IsInRole(Constantes.CRUDEntradas))
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Entradas" asp-action="Crear">Crear Entrada</a>
+                            </li>
+                        }
+
                         @if (User.IsInRole(Constantes.RolAdmin))
                         {
                             <li class="nav-item">
@@ -48,7 +59,10 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
